--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Serif+4&display=swap');
+
+/* common styling */
+
 :root {
     --primary-color: black;
     --font-color: black;
@@ -9,28 +12,6 @@ body {
     background-color: var(--primary-color);
     color: var(--font-color);
     background-image: url(/images/Animated\ Shape.svg);
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    width: 70%;
-    text-align: center;
-    justify-content: center;
-    margin: auto;
-}
-
-#discription {
-    color: white;
-    font-size: 20px;
-}
-
-#heading {
-    text-align: center;
-    color: yellow;
-    margin: auto;
-    margin-top: 2rem;
-    font-size: 40px;
 }
 
 label {
@@ -57,6 +38,121 @@ label {
     border: 2px dashed black;
 }
 
+.nav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: black;
+    color: yellow;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    float: left;
+    box-shadow: 03px 4px 8px 0 rgba(0, 0, 0, .4);
+    border-bottom: 4px solid yellow;
+}
+
+.nav-item {
+    display: inline;
+    float: left;
+    color: white;
+    border-right: 1px solid yellow;
+}
+
+.nav-item.nav-a {
+    display: block;
+    padding: 12px 18px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.nav-brand {
+    display: block;
+}
+
+.nav-item.nav-a:hover {
+    background-color: yellow;
+    color: black;
+}
+
+.nav-active {
+    background-color: yellow;
+    color: black;
+}
+
+.footer {
+    list-style-type: none;
+    margin: auto;
+    margin-top: 2rem;
+    text-align: center;
+    padding: 0;
+    /* padding-top: 1rem; */
+    padding-bottom: 1rem;
+    overflow: hidden;
+    color: yellow;
+    background-color: black;
+    width: fit-content;
+    border-radius: 10rem;
+}
+
+.footer-item {
+    display: inline;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    font-size: 20px;
+}
+
+.footer-head {
+    display: block;
+    color: white;
+    margin-bottom: 1.5rem;
+}
+
+.logo {
+    font-size: 30px;
+    color: yellow;
+    text-decoration: none;
+}
+
+.logo:hover {
+    color: white;
+    transition: 0.2s;
+}
+
+
+/* Is Triangle? */
+
+.container-is-triangle {
+    display: flex;
+    flex-direction: column;
+    width: max-content;
+    text-align: center;
+    justify-content: center;
+    margin: auto;
+    background-color: #eadb0871;
+    padding: 1rem;
+    /* border-radius: 1rem; */
+    border-top-left-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+    border: 2px solid white;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
+}
+
+#discription-is-triangle {
+    color: white;
+    font-size: 20px;
+}
+
+#heading-is-triangle {
+    text-align: center;
+    color: white;
+    margin: auto;
+    margin-top: 5rem;
+    font-size: 40px;
+    margin-bottom: 2rem;
+}
+
 #is-triangle-btn {
     width: 100px;
     margin: auto;
@@ -65,7 +161,6 @@ label {
     border: 2px solid white;
     border-radius: 5px;
     background-color: yellow;
-    margin-top: 2rem;
     cursor: pointer;
     font-weight: 500;
 }
@@ -91,6 +186,41 @@ label {
     border-radius: 5px;
 }
 
+#output-is-triangle-mssg {
+    color: white;
+    margin-top: 2rem;
+    font-size: 26px;
+}
+
+
+/* hypotenuse */
+
+#heading-hypotenuse {
+    text-align: center;
+    color: white;
+    margin: auto;
+    margin-top: 4rem;
+    font-size: 40px;
+    margin-bottom: 2rem;
+    /* -webkit-text-stroke: 1px black; */
+}
+
+.container-hypotenuse {
+    display: flex;
+    flex-direction: column;
+    width: max-content;
+    text-align: center;
+    justify-content: center;
+    margin: auto;
+    background-color: #eadb0871;
+    padding: 1rem;
+    /* border-radius: 1rem; */
+    border: 2px solid white;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
+    border-top-left-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+}
+
 #calculate-hypotenuse-btn {
     width: fit-content;
     margin: auto;
@@ -99,7 +229,7 @@ label {
     border: 2px solid white;
     border-radius: 5px;
     background-color: yellow;
-    margin-top: 2rem;
+    margin-top: 1rem;
     cursor: pointer;
     font-weight: 500;
 }
@@ -109,6 +239,7 @@ label {
     border: 2px solid white;
     transition: 0.2s;
     color: yellow;
+    box-shadow: 5px 5px 5px black;
 }
 
 #output-hypotenuse {
@@ -122,4 +253,56 @@ label {
     margin-top: 2rem;
     padding: 0.8rem;
     font-size: 26px;
+}
+
+#output-hypotenuse-mssg {
+    color: white;
+    margin-top: 2rem;
+    font-size: 26px;
+}
+
+#clear-btn {
+    width: fit-content;
+    margin: auto;
+    height: 30px;
+    font-size: 20px;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: red;
+    margin-top: 2rem;
+    cursor: pointer;
+    font-weight: 500;
+    color: white;
+}
+
+#clear-btn:hover {
+    background-color: black;
+    border: 2px solid white;
+    transition: 0.2s;
+    color: yellow;
+    box-shadow: 5px 5px 5px black;
+}
+
+
+/* Triangle Quiz */
+
+#heading-quiz {
+    text-align: center;
+    color: white;
+    margin: auto;
+    margin-top: 4rem;
+    font-size: 40px;
+    margin-bottom: 2rem;
+}
+
+
+/* Area of Triangle */
+
+#heading-area {
+    text-align: center;
+    color: white;
+    margin: auto;
+    margin-top: 4rem;
+    font-size: 40px;
+    margin-bottom: 2rem;
 }
