--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,6 @@ label {
     margin: auto;
     background-color: #eadb0871;
     padding: 1rem;
-    /* border-radius: 1rem; */
     border-top-left-radius: 2rem;
     border-bottom-right-radius: 2rem;
     border: 2px solid white;
@@ -318,6 +317,7 @@ label {
         margin: 0;
         padding: 0;
         left: 0;
+        color: black;
     }
     .nav-item {
         display: inline;
@@ -325,18 +325,9 @@ label {
         color: white;
         border-right: 1px solid yellow;
     }
-    .nav-item:last-child {
-        border-right: none;
-    }
-    .nav-item.nav-a {
-        display: block;
-        padding-top: 0.5rem;
-        padding-bottom: 0.5rem;
-        padding-left: 0.1rem;
-        padding-right: 0.1rem;
-        text-decoration: none;
-        cursor: pointer;
-        font-size: 15px;
+    .nav-active {
+        background-color: yellow;
+        color: black;
     }
     #heading-is-triangle {
         font-size: 33px;
@@ -374,7 +365,7 @@ label {
     .footer-item {
         display: inline;
         padding-left: 0.4rem;
-        padding-right: 0.4rem;
+        padding-right: 0.rem;
         font-size: 20px;
     }
     .footer-head {
