--- a/styles.css
+++ b/styles.css
@@ -335,12 +335,13 @@ label {
     }
     .nav-item.nav-a {
         display: block;
-        padding-left: 0.2rem;
-        padding-right: 0.2rem;
-        padding-top: 0.6rem;
-        padding-bottom: 0.6rem;
+        padding-left: 0.1rem;
+        padding-right: 0.1rem;
+        padding-top: 0.8rem;
+        padding-bottom: 0.8rem;
         text-decoration: none;
         cursor: pointer;
+        font-size: 15px;
     }
     #heading-is-triangle {
         font-size: 33px;
