--- a/styleArea.css
+++ b/styleArea.css
@@ -17,7 +17,7 @@ body {
 label {
     font-size: larger;
     font-weight: bolder;
-    color: white;
+    color: black;
 }
 
 .input {
@@ -124,146 +124,6 @@ label {
     transition: 0.2s;
 }
 
-
-/* Is Triangle? */
-
-.container-is-triangle {
-    display: flex;
-    flex-direction: column;
-    width: max-content;
-    text-align: center;
-    justify-content: center;
-    margin: auto;
-    background-color: #eadb0871;
-    padding: 1rem;
-    border-top-left-radius: 2rem;
-    border-bottom-right-radius: 2rem;
-    border: 2px solid white;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
-}
-
-#discription-is-triangle {
-    color: white;
-    font-size: 20px;
-}
-
-#heading-is-triangle {
-    text-align: center;
-    color: white;
-    margin: auto;
-    margin-top: 5rem;
-    font-size: 40px;
-    margin-bottom: 2rem;
-}
-
-#is-triangle-btn {
-    width: 100px;
-    margin: auto;
-    height: 30px;
-    font-size: 17px;
-    border: 2px solid white;
-    border-radius: 5px;
-    background-color: yellow;
-    cursor: pointer;
-    font-weight: 500;
-}
-
-#is-triangle-btn:hover {
-    background-color: black;
-    border: 2px solid white;
-    transition: 0.2s;
-    color: yellow;
-}
-
-#output-is-triangle {
-    font-size: larger;
-    color: yellow;
-    background-color: black;
-    width: max-content;
-    border: 2px solid white;
-    margin: auto;
-    max-width: 90%;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    padding: 0.8rem;
-    border-radius: 5px;
-}
-
-#output-is-triangle-mssg {
-    color: white;
-    margin-top: 2rem;
-    font-size: 26px;
-}
-
-
-/* hypotenuse */
-
-#heading-hypotenuse {
-    text-align: center;
-    color: white;
-    margin: auto;
-    margin-top: 4rem;
-    font-size: 40px;
-    margin-bottom: 2rem;
-    /* -webkit-text-stroke: 1px black; */
-}
-
-.container-hypotenuse {
-    display: flex;
-    flex-direction: column;
-    width: max-content;
-    text-align: center;
-    justify-content: center;
-    margin: auto;
-    background-color: #eadb0871;
-    padding: 1rem;
-    /* border-radius: 1rem; */
-    border: 2px solid white;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
-    border-top-left-radius: 2rem;
-    border-bottom-right-radius: 2rem;
-}
-
-#calculate-hypotenuse-btn {
-    width: fit-content;
-    margin: auto;
-    height: 30px;
-    font-size: 20px;
-    border: 2px solid white;
-    border-radius: 5px;
-    background-color: yellow;
-    margin-top: 1rem;
-    cursor: pointer;
-    font-weight: 500;
-}
-
-#calculate-hypotenuse-btn:hover {
-    background-color: black;
-    border: 2px solid white;
-    transition: 0.2s;
-    color: yellow;
-    box-shadow: 5px 5px 5px black;
-}
-
-#output-hypotenuse {
-    color: yellow;
-    background-color: black;
-    border: 2px solid white;
-    border-radius: 5px;
-    width: max-content;
-    margin: auto;
-    max-width: 95%;
-    margin-top: 2rem;
-    padding: 0.8rem;
-    font-size: 26px;
-}
-
-#output-hypotenuse-mssg {
-    color: white;
-    margin-top: 2rem;
-    font-size: 26px;
-}
-
 #clear-btn {
     width: fit-content;
     margin: auto;
@@ -287,18 +147,6 @@ label {
 }
 
 
-/* Triangle Quiz */
-
-#heading-quiz {
-    text-align: center;
-    color: white;
-    margin: auto;
-    margin-top: 4rem;
-    font-size: 40px;
-    margin-bottom: 2rem;
-}
-
-
 /* Area of Triangle */
 
 #heading-area {
@@ -310,11 +158,79 @@ label {
     margin-bottom: 2rem;
 }
 
+#area-formula {
+    margin-bottom: 0;
+    color: black;
+    border: 1px solid black;
+    padding: 0.3rem;
+    border-radius: 2rem;
+}
+
+#discription-area {
+    color: white;
+    font-size: 20px;
+}
+
+.container-area {
+    display: flex;
+    flex-direction: column;
+    width: max-content;
+    text-align: center;
+    justify-content: center;
+    margin: auto;
+    background-color: #eadb0871;
+    padding: 1rem;
+    border-top-left-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+    border: 2px solid white;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
+}
+
+#calculate-area-btn {
+    width: fit-content;
+    margin: auto;
+    height: 30px;
+    font-size: 20px;
+    border: 2px solid white;
+    border-radius: 5px;
+    background-color: yellow;
+    margin-top: 1rem;
+    cursor: pointer;
+    font-weight: 500;
+}
+
+#calculate-area-btn:hover {
+    background-color: black;
+    border: 2px solid white;
+    transition: 0.2s;
+    color: yellow;
+    box-shadow: 5px 5px 5px black;
+}
+
+#output-area {
+    color: yellow;
+    background-color: black;
+    border: 2px solid white;
+    border-radius: 5px;
+    width: max-content;
+    margin: auto;
+    max-width: 95%;
+    margin-top: 2rem;
+    padding: 0.8rem;
+    font-size: 26px;
+}
+
+#output-area-mssg {
+    color: white;
+    margin-top: 2rem;
+    font-size: 26px;
+}
+
+
+/* Css for mobile view */
+
 @media (max-width: 900px) {
-    .container-is-triangle {
-        width: 70%;
-    }
-    .container-hypotenuse {
+    .container-area {
         width: 70%;
     }
     .nav {
@@ -343,24 +259,11 @@ label {
         cursor: pointer;
         font-size: 13px;
     }
-    #heading-is-triangle {
-        font-size: 33px;
-    }
-    #heading-hypotenuse {
-        font-size: 33px;
-    }
     #heading-area {
         font-size: 33px;
     }
-    #heading-quiz {
-        font-size: 33px;
-    }
-    #output-is-triangle {
-        width: 80%;
-        font-size: 20px;
-    }
-    #output-hypotenuse {
-        width: 80%;
+    #output-area {
+        width: 85%;
         font-size: 20px;
     }
     .footer {
