--- a/styleQuiz.css
+++ b/styleQuiz.css
@@ -3,45 +3,47 @@
 /* common styling */
 
 :root {
-    --primary-color: black;
-    --font-color: black;
+    --primary-color: yellow;
+    --font-color: white;
+    --background-color: black;
 }
 
 body {
     font-family: 'Source Serif 4', sans-serif;
-    /* background-color: var(--primary-color); */
-    /* color: var(--font-color); */
-    /* background-image: url(/images/Animated\ Shape.svg); */
+    background-color: black;
+    color: var(--font-color);
+    background-image: url(/images/Animated\ Shape.svg);
+    text-align: center;
 }
 
 label {
-    font-size: larger;
-    font-weight: bolder;
-    color: white;
+    color: var(--font-color);
+    padding: 0.5rem;
+    text-align: left;
+    color: yellow;
 }
 
-.input {
-    width: 100px;
-    height: 40px;
-    border: 2px dotted black;
-    border-radius: 5px;
-    margin: auto;
-    margin-top: 0.5rem;
-    margin-bottom: 2.5rem;
-    font-size: 30px;
+.question-container {
     text-align: center;
-    background-color: white;
-    color: black;
-}
-
-.input:hover {
-    border: 2px dashed black;
+    border: 2px solid var(--primary-color);
+    width: 50%;
+    margin: auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    border-top-right-radius: 2rem;
+    border-bottom-left-radius: 2rem;
+    padding: 0.4rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    font-size: 18px;
+    background-color: black;
 }
 
 .nav {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    left: 0;
     overflow: hidden;
     background-color: black;
     color: yellow;
@@ -76,12 +78,12 @@ label {
 }
 
 .nav-item.nav-a:hover {
-    background-color: yellow;
+    background-color: var(--primary-color);
     color: black;
 }
 
 .nav-active {
-    background-color: yellow;
+    background-color: var(--primary-color);
     color: black;
 }
 
@@ -91,11 +93,10 @@ label {
     margin-top: 2rem;
     text-align: center;
     padding: 0;
-    /* padding-top: 1rem; */
     padding-bottom: 1rem;
     overflow: hidden;
-    color: yellow;
-    background-color: black;
+    color: var(--primary-color);
+    background-color: var(--background-color);
     width: fit-content;
     border-radius: 10rem;
 }
@@ -115,13 +116,48 @@ label {
 
 .logo {
     font-size: 30px;
-    color: yellow;
+    color: var(--primary-color);
     text-decoration: none;
 }
 
 .logo:hover {
     color: white;
     transition: 0.2s;
+}
+
+#submit-ans-btn {
+    width: fit-content;
+    margin: auto;
+    height: 30px;
+    font-size: 20px;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: var(--primary-color);
+    margin-top: 2rem;
+    cursor: pointer;
+    font-weight: 500;
+    color: black;
+    display: block;
+}
+
+#submit-ans-btn:hover {
+    background-color: black;
+    border: 2px solid white;
+    transition: 0.2s;
+    color: var(--primary-color);
+    box-shadow: 5px 5px 5px black;
+}
+
+#output {
+    font-size: 20px;
+    border: 1px solid var(--primary-color);
+    width: max-content;
+    margin: auto;
+    margin-top: 2rem;
+    padding: 0.8rem;
+    background-color: var(--background-color);
+    color: var(--primary-color);
+    border-radius: 5rem;
 }
 
 #clear-btn {
@@ -142,7 +178,7 @@ label {
     background-color: black;
     border: 2px solid white;
     transition: 0.2s;
-    color: yellow;
+    color: var(--primary-color);
     box-shadow: 5px 5px 5px black;
 }
 
@@ -219,5 +255,22 @@ label {
         font-size: 30px;
         color: yellow;
         text-decoration: none;
+    }
+    label {
+        padding: 0;
+    }
+    .question-container {
+        text-align: center;
+        border: 2px solid var(--primary-color);
+        width: 88%;
+        margin: auto;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        border-top-right-radius: 1.5rem;
+        border-bottom-left-radius: 1.5rem;
+        padding: 0.1rem;
+        padding-left: 0.6rem;
+        padding-right: 0.6rem;
+        font-size: 16px;
     }
 }
