--- a/styleHypotenuse.css
+++ b/styleHypotenuse.css
@@ -238,7 +238,7 @@ label {
         display: inline;
         float: left;
         color: white;
-        border-right: 1px solid yellow;
+        border-right: 2px solid yellow;
     }
     .nav-active {
         background-color: yellow;
@@ -289,5 +289,12 @@ label {
         font-size: 30px;
         color: yellow;
         text-decoration: none;
+    }
+    #hypotenuse-formula {
+        margin-bottom: 1.5rem;
+        color: black;
+        border: 1px solid black;
+        border-radius: 2rem;
+        padding: 0.3rem;
     }
 }
